[tool.poetry]
name = "pytorch-unet"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "1.5.1"
torchvision = "0.6.1"
matplotlib = "*"
numpy = "*"
Pillow = "*"
tensorboard = "*"
tqdm = "*"

[tool.poetry.dev-dependencies]
ipython = "^7.19.0"
jupyter = "^1.0.0"
ipdb = "^0.13.4"
torchsummary = "^1.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
